src/components/EndpointTests/css/listitem.css
.list-item {
  margin: 1rem;
}

.test-options {
  border: 2px solid rgb(214, 214, 214);
  border-style: none solid solid solid;
  padding: 1rem;
  text-align: left;
  display: flex;
}

.flex-results-left {
  flex-grow: 2;
  overflow-wrap: anywhere;
}

